v5.2.4
- Fixed - Social links svg height
- Updated - block-templates/block-patterns
- Updated - Columns styles to block (conditionaly when used)
- Updated - Navigation styles/scripts to chunks loaded only when used.
- Added - Block gap support to Gutenberg Styles extension
- Added - New Utilities PHP styles extension (removed BootStrap`s utilities) / loaded when used

v5.2.3
- Fixed - Starter content conflict with WordPress default pages.

v5.2.2
- Updated - Gutenberg remove from theme activation check - WP does that automatically until 5.9 for FSE themes
- Updated - Pattern to use spacing attributes instead of BootStrap's classes
- Updated - Reduce WooCoomerce starter support to minimum / eventually all support extensions will be moved to own plugin
- Updated - Duotone support transparency
- Updated - BEM class naming for some post meta block views
- Updated - Updated starter content
- Updated - Updated page templates
- Updated - Block Table CSS from SASS to block class (enqueued when needed)
- Updated - Block Button CSS from SASS to block class (enqueued when needed)
- Updated - Block Buttons CSS from SASS to block class (enqueued when needed)
- Removed - Widgets - sidebar registration
- Removed - Comment Walker in favor of Gutenberg block
- Removed - comments.php
- Removed - page-full.html
- Removed - Removed unnecessary Boostrap CSS
- Added - Gutenberg Flex layout support
- Added - Gutenberg Comment Template/Form blocks
- Added - Site logo block wrapper (move custom logo filter to it and added styles)
- Added - Align wide support / refactored couple of blocks with this support

v5.2.1
- Updated - Gubenberg Editor columns grid highlight: add top/bottom border for better visuals and remove padding bottom
- Fix - A but with Gutenberg Styles extension not adding clientId when block is added

v5.2.0
- Fixed - Double textdomain

v5.1.9
- Updated - Gubenberg Style extension to remove styles for all core blocks
- Updated - Add missing menu items attributes