@@ -3,15 +3,15 @@
 <main class="wp-block-group" style="padding-top:5rem;padding-bottom:5rem">
     <!-- wp:columns {"className":"flex-column"} -->
     <div class="wp-block-columns flex-column">
-        <!-- wp:column {"className":"col-sm-8 col-lg-6 col-xl-5 mx-auto text-center"} -->
-        <div class="wp-block-column col-sm-8 col-lg-6 col-xl-5 mx-auto text-center">
+        <!-- wp:column {"className":"col-sm-8 col-lg-6 col-xl-5 mx-auto has-text-align-center"} -->
+        <div class="wp-block-column col-sm-8 col-lg-6 col-xl-5 mx-auto has-text-align-center">
             <!-- wp:heading {"level":1,"className":"display-6","textColor":"primary"} -->
             <h1 class="has-text-color has-primary-color display-6">Oops! That page can’t be found.</h1>
             <!-- /wp:heading -->
             <!-- wp:paragraph -->
             <p>It looks like nothing was found at this location. Maybe try a search?</p>
             <!-- /wp:paragraph -->
-            <!-- wp:search {"placeholder":"What are you looking for?","showLabel":false,"buttonText":"Search","buttonUseIcon":true,"borderColor":"primary","backgroundColor":"primary","textColor":"background"} /-->
+            <!-- wp:search {"placeholder":"What are you looking for?","showLabel":false,"buttonUseIcon":true,"backgroundColor":"primary"} /-->
         </div>
         <!-- /wp:column -->
     </div>
