@@ -1,6 +1,7 @@
 v5.2.4
 - Fixed - Social links svg height
 - Updated - block-templates/block-patterns
+- Updated - Search block markup/styles
 - Updated - Columns styles to block (conditionaly when used)
 - Updated - Navigation styles/scripts to chunks loaded only when used.
 - Added - Block gap support to Gutenberg Styles extension
